@@ -48,6 +48,6 @@ public class SchemaRegistryContainer extends GenericContainer<SchemaRegistryCont
   }
 
   public String getSchemaRegistryUrl() {
-    return String.format("http://%s:%s", getHost(), getMappedPort(SCHEMA_REGISTRY_PORT));
+    return "http://%s:%s".formatted(getHost(), getMappedPort(SCHEMA_REGISTRY_PORT));
   }
 }
